<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".comments_screen.view.CommentsActivity">

    <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/enterComment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            android:id="@+id/swipeLayout">

        <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterComment" android:id="@+id/commentRecyclerView"/>
    </android.support.v4.widget.SwipeRefreshLayout>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/enterUsername" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentsScreenTitle"
            android:layout_marginTop="16dp"
            android:hint="@string/username_hint"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/enterComment" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/enterUsername"
            app:layout_constraintStart_toStartOf="@+id/enterUsername"
            android:hint="@string/comment_hint"
            app:layout_constraintEnd_toEndOf="@+id/postButton" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/credits_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/commentsScreenTitle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textStyle="bold|italic"
            android:textAlignment="center" android:textSize="18sp" android:textColor="@color/secondaryColor"/>
    <Button
            android:text="@string/post_button_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/postButton"
            android:background="@drawable/oval_button"
            app:layout_constraintTop_toTopOf="@+id/enterUsername"
            app:layout_constraintBottom_toBottomOf="@+id/enterUsername" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


</android.support.constraint.ConstraintLayout>