<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".learning_screen.LearningActivity"
        android:background="@color/cardview_light_background">

    <android.support.v4.view.ViewPager
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="96dp"
            android:id="@+id/viewPager" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/stepTitleText"/>
    <Button
            android:text="@string/next_button_text"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/nextButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/oval_button"
            android:textStyle="bold" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/back_button_text"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/nextButton"
            app:layout_constraintBottom_toBottomOf="@+id/nextButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            android:fontFamily="sans-serif-medium" android:textColor="@android:color/black" android:textSize="18sp"
            android:gravity="center"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/step_title_1"
            android:id="@+id/stepTitleText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Step1: Set up"
            android:textStyle="bold|italic" android:textSize="30sp" android:textAlignment="center"
            android:textColor="@color/secondaryColor" app:layout_constraintBottom_toTopOf="@+id/viewPager"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="16dp"/>
    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/worm_dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dotsColor="@color/secondaryColor"
            app:dotsStrokeColor="@color/primaryColor"
            app:dotsCornerRadius="8dp"
            app:dotsSize="16dp"
            app:dotsSpacing="4dp"
            app:dotsStrokeWidth="2dp"
            app:progressMode="true"
            android:clickable="false"
            app:layout_constraintTop_toBottomOf="@+id/viewPager" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

    </com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator>
</android.support.constraint.ConstraintLayout>